# Engineering-Mastery-Lab

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml  desktop.yml
docs/: 20260711-Engineering-Workbench-Completion-Receipt-Rev00.md  Adapter-Authoring-Guide.md  Architecture.md  Development-Setup.md  Execution-Plan.md  Future_Supabase_Integration.md  Installation.md  Known-Limitations.md  Learning_Roadmap.md  Release-Checklist.md  Release-Readiness-Report.md  Session-State.md  Third-Party-Licences.md  Troubleshooting.md
docs/adr/: ADR-0001-Tauri-Adoption.md  ADR-0002-Adapter-Boundary.md  ADR-0003-Workspace-Schema.md  ADR-0004-External-Process-Security.md  ADR-0005-Web-Desktop-Code-Sharing.md
examples/rc-filter-workspace/: README.md  workbench.json
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: clear_tool_executable.toml  create_dir_all.toml  detect_tool.toml  file_exists.toml  hash_file.toml  pick_tool_executable.toml  pick_workspace_directory.toml  run_tool.toml  write_text_file_atomic.toml
src-tauri/src/: lib.rs  paths.rs  process.rs  tool_authority.rs  tools.rs  workspace_authority.rs  workspace_fs.rs
src/components/: AppErrorBoundary.tsx  CadDrawing.tsx  CadViewport.tsx  EngineeringCalculator.tsx  Icon.tsx  Layout.tsx  LinePlot.tsx  MaterialsTable.tsx  ModuleShell.tsx  PageHeader.tsx  ProgressContext.tsx  Slider.tsx  Tabs.tsx  UnitConverter.tsx  WorkbenchContext.tsx  WorkspaceConfigEditor.tsx  WorkspaceFileEditor.tsx
src/data/: materials.ts  modules.ts  pathways.ts  skills.ts
src/lib/: metrics.ts  (+2 more)
(+81 files in other folders)
