[package]
name = "engineering-workbench"
version = "0.1.0"
description = "Engineering Workbench: engineering learning labs plus local circuit/PCB toolchain integration"
authors = ["Sajeevan Veeriah"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
sha2 = "0.10"
hex = "0.4"

[profile.release]
strip = true
lto = true
